<resources>
    <string name="app_name">praktikum10</string>
    <string name="title">Judul</string>
    <string name="category">Kategori</string>
    <string name="description">deskripsi</string>
    <string name="datet">Tanggal</string>
    <string name="date">Tanggal</string>
    <string name="delete">hapus</string>
    <string name="submit">Submit</string>
    <string name="writer">penulis</string>
    <string name="place">Asal</string>
</resources>